syntax = "proto3";

option csharp_namespace = "Commandant";

package garrison;

service Garrison {
  rpc SendTask (TaskRequest) returns (TaskResponse);
}

message TaskRequest {
  string state = 1;
}

message TaskResponse {
  bytes file = 1;
  string app = 2;
}               